--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">News App</a>
+        <a class="navbar-brand" href="/">News App</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 {% for cat in categories %}
