--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,30 +11,31 @@
             grid-template-columns: 1fr 1fr 1fr 1fr;
         }
     </style>
-    <title>Bootstrap demo</title>
+    <title>News App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
+
 <body>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">News App</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                {% for cat in categories %}
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">News App</a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    {% for cat in categories %}
                     <li class="nav-item">
-                        <a class="nav-link {% if cat == active_category %}active{% endif %}"
-                           href="/{{ cat }}">{{ cat.capitalize() }}</a>
+                        <a class="nav-link {% if cat == active_category %}active{% endif %}" href="/{{ cat }}">{{
+                            cat.capitalize() }}</a>
                     </li>
-                {% endfor %}
-            </ul>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-<h1>Breaking news</h1>
-<div class="main-container">
-    {% for samachar in allNews.articles %}
+    </nav>
+    <h1>Breaking news</h1>
+    <div class="main-container">
+        {% for samachar in allNews.articles %}
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="{{ samachar.urlToImage }}" alt="Card image cap">
             <div class="card-body">
@@ -43,11 +45,12 @@
             </div>
         </div>
 
-    {% endfor %}
+        {% endfor %}
 
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
